--- a/src/App.css
+++ b/src/App.css
@@ -26,19 +26,19 @@ ul, li {
     --bgColorForm: rgb(255, 255, 255);
 
     /*Input*/
-    --bgColorInput: white;
+    --bgColorInput: rgb(255, 255, 255);
     
     /* BannerPromo */
-    --bgPromo: #f28d3ad9;
-    --colorTextPromo: white;
+    --bgPromo: rgba(242, 141, 58, 0.851);
+    --colorTextPromo: rgb(255, 255, 255);
 
     /* Slider */
-    --bgCollection: #2D9596;
-    --colorTextCollection: white;
+    --bgCollection: rgb(45, 149, 150);
+    --colorTextCollection: rgb(255, 255, 255);
 
     /* CardProduct */
-    --bgCardProduct: #ddefee;
-    --bgModalProduct: #f9f9f9;
+    --bgCardProduct: rgb(231, 235, 239);
+    --bgModalProduct: rgb(249, 249, 249);
     --colorBoxShadowCardproduct: rgba(33, 34, 33, 0.115);
     --colorTextCardPrice: rgb(128, 219, 86);
     --colorTag: #2D9596;
@@ -47,23 +47,26 @@ ul, li {
     --bgColorBoxCustomer: #e5e5e2;
     --bgColorSupplier: #FF9671;
 
+    /*Backdrop*/
+    --colorbackdrop: rgba(33, 34, 33, 0.788);
     /* Boton */
-    --colorButton: #2D9596;
-    --bgButtonHover: #23696b;
-    --bgButtonHoverHome: #2D9596;
-    --bgButtonHoverHomeCard: #f28d3ad9;
+    --colorButton: rgb(45, 149, 150);
+    --bgButtonHover: rgb(35, 105, 107);
+    --bgButtonHoverHome: rgb(45, 149, 150);
+    --bgButtonHoverHomeCard: rgba(242, 141, 58, 0.851);
     --bgButtonCancel: rgb(246, 64, 64);
     --bgButtonCancelHover: rgb(247, 32, 32);
 
     /*Texto*/
-    --colorText_a: #11314b;
-    --colorText_b: white;
-    --colorText_c: #2D9596;
-    --colorText_d: red;
+    --colorText_a: rgba(17, 49, 75, 0.882);
+    --colorText_b: rgb(246, 246, 246);
+    --colorText_c: rgb(45, 149, 150);
+    --colorText_d: rgb(255, 0, 0);
     --colorText_e: rgb(150, 149, 149);
     --colorText_f: rgb(29, 28, 28);
-    --colorText_opacity: #26507336;
-    --colorText_hover: rgb(232, 232, 232);
+    --colorText_g: rgb(97, 103, 121);
+    --colorText_opacity: rgba(38, 80, 115, 0.212);
+    --colorText_hover: rgb(240, 132, 245);
 
     /*Others*/
     --bgViolet: rgb(251, 92, 92);
@@ -71,43 +74,42 @@ ul, li {
 
     /*border*/
     --borderContainer: rgba(154, 151, 151, 0.141);
-    --colorBorderButton: #265073;
-    --colorBorderInput: #2650735a;
+    --colorBorderButton: rgb(38, 80, 115);
+    --colorBorderInput: rgba(38, 80, 115, 0.353);
 
     /*barScrollColor*/
-    --colorbar_a: #2d949628;
+    --colorbar_a: rgba(45, 148, 150, 0.157);
     --colorbar_b: rgba(33, 34, 33, 0.115);
-    --bgScrollbar: #edf0f3;
+    --bgScrollbar: rgb(237, 240, 243);
 
+    /*Errors*/
+    --colorError: #ff3939;
+    --colorLowStock: red;
+    
+    
 }
 
 input, select{
-    height: 40px;
-    background-color: var(--bgColorInput);
+    height: 45px;
+    background-color: var(--bgModalProduct);    
     outline: none;    
     width: 100%;
     border: 1px solid var(--colorBorderInput);
+    padding: 10px;
+    font-size: 1em;
     border-radius: 5px ;
     -webkit-border-radius: 5px ;
     -moz-border-radius: 5px ;
     -ms-border-radius: 5px ;
     -o-border-radius: 5px ;
-    margin-bottom: 5px;
-    
-    
-}
-input{
-    padding: 10px;
-    font-size: 1em;
 }
 
-select{
-    font-size: 1em;
-    padding-left: 8px;
-    display: flex;
-    flex: 1;
+label{
+    font-size: 0.9em;
+    padding: 0 5px;
     
 }
+
 
 button{
     height: 40px;
@@ -136,4 +138,27 @@ img{
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    
+}
+
+.input-error{
+    border-bottom: 2px solid var(--colorError);
+}
+
+*::-webkit-scrollbar {
+    width: 5px;
+
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--colorButton);
+    border-radius: 2.5px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: var(--bgScrollbar);
+}
+
+.qr_image_title{
+    padding-top: 50px;
 }
