--- a/src/components/Modals/Product/css/EditProduct.css
+++ b/src/components/Modals/Product/css/EditProduct.css
@@ -1,28 +1,28 @@
-.add_product_container{
+.edit_product_container {
     z-index: 99;
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
     height: 100vh;
-    padding: 15px;   
+    padding: 15px;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
 }
 
-.add_product_backdrop{
+.edit_product_backdrop {
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
-    height: 100%;     
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.323);
 }
 
-.add_product_form{
+.edit_product_form {
     z-index: 99;
-    width: 100%;    
+    width: 100%;
     max-height: 100%;
     background-color: var(--bgModalProduct);
     padding: 15px;
@@ -32,117 +32,108 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     overflow-y: auto;
-
 }
 
-.add_product_title_container{
-   
+.edit_product_title_container {
     width: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
     background-color: var(--bgContainer_b);
-    
 }
-.add_product_title{
+
+.edit_product_title {
     font-size: 1.2em;
     padding: 5px;
     color: var(--colorText_b);
     padding-left: 15px;
 }
 
-.add_product_label{                
+.edit_product_label {
     color: var(--colorText_a);
     position: relative;
     top: 10px;
     left: 10px;
 }
 
-.add_product_group_elements_container{
+.edit_product_group_elements_container {
     display: flex;
-    gap: 10px;   
+    gap: 10px;
     width: 100%;
-    
+
 }
-.add_product_group_elements{
+
+.edit_product_group_elements {
     flex: 1;
 }
 
-.add_product_button_container{
+.edit_product_button_container {
     display: flex;
     gap: 10px;
     padding-top: 10px;
 }
 
-.add_product_button_cancel{
+.edit_product_button_cancel {
     background-color: var(--bgButtonCancel);
 }
 
-.add_product_button_cancel:hover{
+.edit_product_button_cancel:hover {
     background-color: var(--bgButtonCancelHover);
 }
 
-.add_product_image_container{
+.edit_product_image_container {
     width: 100%;
     border-radius: 15px;
 }
-.add_product_image{
+
+.edit_product_image {
     width: 100%;
 }
 
-.add_product_images_load_container{
-    
-    
+.edit_product_images_load_container {
     border-radius: 5px;
     display: flex;
-    
     align-items: center;
     gap: 5px;
-    
 }
 
-
-.add_product_images_img_container{        
-    
+.edit_product_images_img_container {
     width: 100%;
-    max-width: 100px; 
-    height: 100px;   
+    max-width: 100px;
+    height: 100px;
     position: relative;
 }
 
-.add_product_images{
+.edit_product_images {
     width: 100%;
+    cursor: pointer;
 }
 
-.add_product_img_msj{
+.edit_product_img_msj {
     color: var(--colorText_opacity);
     margin: 0 auto;
 }
 
-.add_product_icon_delete_image{
+.edit_product_icon_delete_image {
     color: var(--colorText_a);
     position: absolute;
     top: 0;
     right: 0;
 }
 
-
-
-.add_product_label_container{
+.edit_product_label_container {
     height: max-content;
     margin-top: 15px;
+    
 }
 
-
-.add_product_label{
+.edit_product_label{
     background-color: var(--bgModalProduct);    
 }
 
-.add_product_input_image{
+.edit_product_input_image {
     margin: 10px 0;
 }
 
-
-.add_product_images_border{
+.edit_product_images_border {
     border: 1px solid var(--colorBorderInput);
 }
-
