--- a/src/components/Modals/Contact/css/AddContact.css
+++ b/src/components/Modals/Contact/css/AddContact.css
@@ -5,24 +5,10 @@
     right: 0;
     width: 100%;
     height: 100vh;   
-
+    padding: 15px; 
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.add_contact_form{
-    z-index: 99;
-    width: 100%;
-    margin: 15px;
-    height: max-content;
-    background-color: var(--bgModalProduct);
-    padding: 15px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
 }
 
 .add_contact_backdrop{    
@@ -31,8 +17,23 @@
     right: 0;
     width: 100%;
     height: 100vh;   
-    background-color: rgba(0, 0, 0, 0.323);
+    background-color: var(--colorbackdrop);
 }
+
+.add_contact_form{
+    z-index: 99;
+    width: 100%;    
+    max-height: 100%;
+    background-color: var(--bgModalProduct);
+    padding: 15px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    overflow-y: auto;
+}
+
 .add_contact_buttons_container{
     display: flex;
     gap: 15px;
@@ -54,9 +55,12 @@
     margin-bottom: 10px;
 }
 
-.add_contact_label{        
-    padding: 0 5px;
+.add_contact_label{                
     color: var(--colorText_a);
+    position: relative;
+    top: 10px;
+    left: 10px;
+    background-color: var(--bgModalProduct);    
 }
 
 .add_contact_input{
