--- a/src/components/Modals/Contact/css/EditContact.css
+++ b/src/components/Modals/Contact/css/EditContact.css
@@ -5,7 +5,7 @@
     right: 0;
     width: 100%;
     height: 100vh;   
-
+    padding: 15px; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,14 +17,13 @@
     right: 0;
     width: 100%;
     height: 100vh;   
-    background-color: rgba(0, 0, 0, 0.323);
+    background-color: var(--colorbackdrop);
 }
 
 .edit_contact_form{
     z-index: 99;
-    width: 100%;
-    margin: 15px;
-    height: max-content;
+    width: 100%;    
+    max-height: 100%;
     background-color: var(--bgModalProduct);
     padding: 15px;
     border-radius: 10px;
@@ -32,6 +31,7 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    overflow-y: auto;
 }
 
 .edit_contact_buttons_container{
@@ -55,10 +55,15 @@
     margin-bottom: 10px;
 }
 
-.edit_contact_label{        
-    padding: 0 5px;
+.edit_contact_label{                
     color: var(--colorText_a);
+    position: relative;
+    top: 10px;
+    left: 10px;    
+    padding: 0 5px;
+    background-color: var(--bgModalProduct);    
 }
+
 
 .edit_contact_input{
     background-color: var(--bgModalProduct);   
