--- a/src/page/css/LoginPage.css
+++ b/src/page/css/LoginPage.css
@@ -1,7 +1,7 @@
 .login_page_container{
     height: 100vh;
     width: 100%;
-    background-image: url('./home.jpg');
+    background-image: url('../img/home.jpg');
     background-position: center;    
     background-size:cover;
 
